Add logback support for application and library with configuration via application.properties
Signed-off-by: Meraj <meraj.enigma@gmail.com>

--- a/multimodule/application/src/main/resources/application.properties
+++ b/multimodule/application/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 service.message=Hello World
+
+logging.level.hello.app=debug	
+logging.pattern.console=		
+logging.path=logs		
+logging.file=${logging.path}/log.log		
+logging.pattern.file=%d{dd-MM-yyyy HH:mm:ss.SSS} [%thread] %-5level %logger{36}.%M - %msg%n
