--- a/multimodule/application/src/main/resources/application.properties
+++ b/multimodule/application/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 service.message=Hello World
 
-logging.level.hello.app=debug	
+logging.level.hello=debug	
+
 logging.pattern.console=		
 logging.path=logs		
 logging.file=${logging.path}/log.log		
