Added support for email sending
Signed-off-by: Meraj <meraj.enigma@gmail.com>

--- a/restdemo/src/main/resources/application.properties
+++ b/restdemo/src/main/resources/application.properties
@@ -2,3 +2,9 @@ server.port = 9000
 server.ssl.key-store = tomcat.keystore
 server.ssl.key-store-password = abc123
 server.ssl.key-password = abc123
+
+spring.mail.host = smtp.gmail.com
+spring.mail.username = demo.rails007@gmail.com
+spring.mail.password = mcmxcd123
+spring.mail.port=587
+spring.mail.properties.mail.smtp.starttls.enable = true
