--- a/restdemo/src/main/resources/application.properties
+++ b/restdemo/src/main/resources/application.properties
@@ -8,3 +8,6 @@ spring.mail.username = demo.rails007@gmail.com
 spring.mail.password = mcmxcd123
 spring.mail.port=587
 spring.mail.properties.mail.smtp.starttls.enable = true
+
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
