--- a/restdemo/src/main/resources/application.properties
+++ b/restdemo/src/main/resources/application.properties
@@ -9,5 +9,14 @@ spring.mail.password = mcmxcd123
 spring.mail.port=587
 spring.mail.properties.mail.smtp.starttls.enable = true
 
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
+#spring.h2.console.enabled=true
+#spring.h2.console.path=/h2-console
+
+# ===============================
+# = DATA SOURCE
+# ===============================
+#spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://localhost:3306/restdemo?useSSL=false
+spring.datasource.username=root
+spring.datasource.password=root
