--- a/restdemo/pom.xml
+++ b/restdemo/pom.xml
@@ -79,6 +79,18 @@
     		<artifactId>jjwt</artifactId>
     		<version>0.9.0</version>
 		</dependency>
+		<dependency>
+    		<groupId>org.springframework.boot</groupId>
+    		<artifactId>spring-boot-devtools</artifactId>
+    		<scope>runtime</scope>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
+		<dependency>
+   			<groupId>org.projectlombok</groupId>
+    		<artifactId>lombok</artifactId>
+    		<version>1.16.20</version>
+    		<scope>provided</scope>
+		</dependency>	
 	</dependencies>
 
 	<build>
