--- a/restdemo/pom.xml
+++ b/restdemo/pom.xml
@@ -91,6 +91,18 @@
     		<version>1.16.20</version>
     		<scope>provided</scope>
 		</dependency>	
+		<!-- https://mvnrepository.com/artifact/org.modelmapper/modelmapper -->
+		<dependency>
+    		<groupId>org.modelmapper</groupId>
+    		<artifactId>modelmapper</artifactId>
+    		<version>1.1.3</version>
+		</dependency>	
+		<!-- https://mvnrepository.com/artifact/org.liquibase/liquibase-core -->
+		<dependency>
+    		<groupId>org.liquibase</groupId>
+    		<artifactId>liquibase-core</artifactId>
+    		<version>3.6.1</version>
+		</dependency>		
 	</dependencies>
 
 	<build>
