--- a/restdemo/src/main/resources/application.properties
+++ b/restdemo/src/main/resources/application.properties
@@ -20,3 +20,6 @@ spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://localhost:3306/restdemo?useSSL=false
 spring.datasource.username=root
 spring.datasource.password=root
+
+spring.liquibase.change-log=classpath:/db/changelog/db.changelog-master.xml
+spring.liquibase.check-change-log-location=true
