--- a/microservices/composite/product-composite-service/src/main/resources/application.properties
+++ b/microservices/composite/product-composite-service/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=product-composite-service
-server.port=8002
-
-eureka.client.service-url.default-zone=http://localhost:8761/eureka
+#spring.application.name=product-composite-service
+#server.port=8002
+#
+#eureka.client.service-url.default-zone=http://localhost:8761/eureka
