--- a/microservices/core/review-service/src/main/resources/application.properties
+++ b/microservices/core/review-service/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=review-service
-server.port=8001
-
-eureka.client.service-url.default-zone=http://localhost:8761/eureka
+#spring.application.name=review-service
+#server.port=8001
+#
+#eureka.client.service-url.default-zone=http://localhost:8761/eureka
