--- a/microsinaction/configserver/src/main/resources/config/licensingservice/licensingservice.yml
+++ b/microsinaction/configserver/src/main/resources/config/licensingservice/licensingservice.yml
@@ -1,6 +1,10 @@
-spring.jpa.hibernate.ddl-auto: update
-spring.jpa.show-sql: "true"
-
-spring.datasource.url: "jdbc:mysql://localhost:3306/eagle_eye_local"
-spring.datasource.username: root
-spring.datasource.password: root
+spring:
+  datasource:
+    username: microservice
+    pasword: microservice
+    url: jdbc:mysql://localhost:3306/eagle_eye_local?useSSL=false
+  jpa:
+    properties.hibernate.dialect: org.hibernate.dialect.MySQL5Dialect
+    hibernate.ddl-auto: update
+    generate-ddl: true
+    show-sql: true
