--- a/microsinaction/configserver/src/main/resources/config/licensingservice/licensingservice.yml
+++ b/microsinaction/configserver/src/main/resources/config/licensingservice/licensingservice.yml
@@ -1,7 +1,7 @@
 spring:
   datasource:
-    username: microservice
-    pasword: microservice
+    username: root
+    password: phoenix
     url: jdbc:mysql://localhost:3306/eagle_eye_local?useSSL=false
   jpa:
     properties.hibernate.dialect: org.hibernate.dialect.MySQL5Dialect
