--- a/microsinaction/configserver/src/main/resources/config/licensingservice.yml
+++ b/microsinaction/configserver/src/main/resources/config/licensingservice.yml
@@ -4,7 +4,7 @@ spring:
   datasource:
     username: root
     password: root
-    url: jdbc:mysql://localhost:3306/eagle_eye_local?useSSL=false
+    url: jdbc:mysql://localhost:3306/eagle_eye_local
   jpa:
     properties.hibernate.dialect: org.hibernate.dialect.MySQL5Dialect
     hibernate.ddl-auto: update
