--- a/microsinaction/configserver/src/main/resources/config/organizationservice.yml
+++ b/microsinaction/configserver/src/main/resources/config/organizationservice.yml
@@ -1,10 +1,14 @@
 server:
   port: 8081
+security:
+  oauth2:
+    resource:
+      userInfoUri: http://localhost:8901/user
 spring:
   datasource:
     username: root
     password: root
-    url: jdbc:mysql://localhost:3306/eagle_eye_local?useSSL=false
+    url: jdbc:mysql://localhost:3306/eagle_eye_local
   jpa:
     properties.hibernate.dialect: org.hibernate.dialect.MySQL5Dialect
     hibernate.ddl-auto: update
