Add token protection in licensing server Add token passing in zuul server and authorization server
Signed-off-by: Meraj <meraj.enigma@gmail.com>

--- a/microsinaction/configserver/src/main/resources/config/licensingservice.yml
+++ b/microsinaction/configserver/src/main/resources/config/licensingservice.yml
@@ -10,3 +10,12 @@ spring:
     hibernate.ddl-auto: update
     generate-ddl: true
     show-sql: true
+security:
+  oauth2:
+    client:
+      clientId: eagleeye
+      clientSecret: secret
+      accessTokenUri: http://localhost:8901/oauth/token
+      userAuthorizationUri: http://localhost:8901/oauth/authorize
+    resource:
+      userInfoUri: http://localhost:8901/user
