--- a/microsinaction/organization-service/pom.xml
+++ b/microsinaction/organization-service/pom.xml
@@ -68,6 +68,11 @@
             <groupId>org.springframework.security</groupId>
             <artifactId>spring-security-rsa</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-jwt</artifactId>
+            <version>1.0.0.RELEASE</version>
+        </dependency>
     </dependencies>
 
     <dependencyManagement>
